syntax = "proto3";

package register;

message RegisterRequest {
	uint64 service_id = 1;
}

message RegisterResponse {
	uint32 heartbeat_port = 1;
	uint32 service_port = 2;
	uint64 session_id = 3;
}

message StatusRequest {
	bool heartbeat_succeed = 1;
	bool service_succeed = 2;
	uint64 session_id = 3;
}

message StatusResponse {
	bool succeed = 1;
	uint32 heartbeat_port = 2;
	uint32 service_port = 3;
	uint64 session_id = 4;
}

message ReRegisterRequest {
	uint32 heartbeat_port = 1;
	uint32 service_port = 2;
	uint64 service_id = 3;
}

message ReRegisterResponse {
	bool succeed = 1;
	string msg = 2;
}

service Register {
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	rpc ReportStatus(StatusRequest) returns (StatusResponse) {}
	rpc ReRegister(ReRegisterRequest) returns (ReRegisterResponse) {}
}
